fix(pixel-art-dropdown): add some margin top to the items list on mobile devices

--- a/app/components/PixelArtDropdown/styles.scss
+++ b/app/components/PixelArtDropdown/styles.scss
@@ -78,4 +78,10 @@
       background-color: red;
     }
   }
+
+  @media (max-width: 407px) {
+    .weather-form-dropdown__list{
+      margin-top: 24px;
+    }
+  }
 }
